Se añaden las imágenes estáticas en la sección de producto mediante CSS y grid

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <h1>Nuestros Productos</h1>
 
             <div class="grid">
-                <div class="producto">
+
+                <div class="producto"> <!-- Productos ̣-->
                     <a href="producto.html">
                         <img class="producto__imagen" src="img/1.jpg" alt="imagen camisa">
                         <div class="producto__informacion">
@@ -164,6 +165,14 @@
                             <p class="producto__precio">$25</p>
                         </div>
                     </a>
+                </div> <!-- Productos -->
+
+                <div class="grafico grafico--camisas">
+
+                </div>
+
+                <div class="grafico grafico--node">
+
                 </div>
 
             </div>
