Se añaden los estilos a la sección de Nosotros en CSS

--- a/nosotros.html
+++ b/nosotros.html
@@ -25,6 +25,19 @@
         <main class="contenedor">
             <h1>Nosotros</h1>
 
+                <div class="nosotros"> 
+                    <div class="nosotros__contenido">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum facilis animi, velit tenetur officia corporis rem qui molestiae recusandae mollitia voluptate harum perspiciatis odit. Assumenda maxime similique quaerat sint ducimus!.
+                        </p>
+
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In doloribus, eaque saepe magni laudantium quod asperiores. Excepturi ipsam maxime dolor maiores esse fugit possimus corrupti dolorem neque, adipisci voluptates deleniti.
+                        </p>
+                    </div>
+                    
+                    <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+                </div>
         </main>
 
         <footer class="footer">
