Se termina el diseño para la página de Nosotros en CSS y se añaden las imágenes de porqué comprar

--- a/nosotros.html
+++ b/nosotros.html
@@ -40,6 +40,39 @@
                 </div>
         </main>
 
+        <section class="contenedor comprar">
+            <h2 class="comprar__titulo">¿Por qué comprar con nosotros?</h2>
+
+            <div class="bloques">
+
+                <div class="bloque">
+                    <img class="bloque__imagen" src="img/icono_1.png" alt="por que comprar">
+                    <h3 class="bloque__titulo">El mejor precio</h3>
+                    <p>Pariatur adipisicing laboris officia mollit minim ea exercitation ullamco reprehenderit proident magna non aliquip ex.</p>
+                </div> <!--bloque-->
+
+                <div class="bloque">
+                    <img class="bloque__imagen" src="img/icono_2.png" alt="por que comprar">
+                    <h3 class="bloque__titulo">Para Devs</h3>
+                    <p>Pariatur adipisicing laboris officia mollit minim ea exercitation ullamco reprehenderit proident magna non aliquip ex.</p>
+                </div> <!--bloque-->
+
+                <div class="bloque">
+                    <img class="bloque__imagen" src="img/icono_3.png" alt="por que comprar">
+                    <h3 class="bloque__titulo">Envío gratis</h3>
+                    <p>Pariatur adipisicing laboris officia mollit minim ea exercitation ullamco reprehenderit proident magna non aliquip ex.</p>
+                </div> <!--bloque-->
+
+                <div class="bloque">
+                    <img class="bloque__imagen" src="img/icono_4.png" alt="por que comprar">
+                    <h3 class="bloque__titulo">La mejor calidad</h3>
+                    <p>Pariatur adipisicing laboris officia mollit minim ea exercitation ullamco reprehenderit proident magna non aliquip ex.</p>
+                </div> <!--bloque-->
+
+            </div> <!--bloques-->
+
+        </section>
+
         <footer class="footer">
             <p class="footer__texto">Basic Store - Todos los derechos reservados. 2021. </p>
         </footer>
