Se termina el diseño en HTML para la parte de producto compra

--- a/producto.html
+++ b/producto.html
@@ -23,7 +23,28 @@
         </nav>
 
         <main class="contenedor">
-            <h1>Producto</h1>
+            <h1>React JS</h1>
+            
+            <div class="camisa"></div>
+                <img class="" src="img/3.jpg" alt="Imagen del producto">
+
+                <div class="camisa__contenido">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi asperiores officia sequi magnam architecto sint non dicta minima beatae corporis temporibus atque dolores, dolorum vitae tempore debitis maxime hic veniam!
+                    </p>
+
+                    <form class="formulario">
+                        <select>
+                            <option disabled selected>-- Seleccionar Talla --</option>
+                            <option>S</option>
+                            <option>M</option>
+                            <option>L</option>
+                            <option>XL</option>
+                        </select>
+                        <input type="number" placeholder="Cantidad" min="1">
+                        <input type="submit" value="Agregar al carrito">
+                    </form>
+                </div>
 
         </main>
 
