Se termina el layout con solo funcionando el producto de la camisa de React y sin mostrar el precio en la pestaña producto

--- a/producto.html
+++ b/producto.html
@@ -25,8 +25,8 @@
         <main class="contenedor">
             <h1>React JS</h1>
             
-            <div class="camisa"></div>
-                <img class="" src="img/3.jpg" alt="Imagen del producto">
+            <div class="camisa">
+                <img class="camisa__imagen" src="img/3.jpg" alt="Imagen del producto">
 
                 <div class="camisa__contenido">
                     <p>
@@ -34,18 +34,18 @@
                     </p>
 
                     <form class="formulario">
-                        <select>
+                        <select class="formulario__campo">
                             <option disabled selected>-- Seleccionar Talla --</option>
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                             <option>XL</option>
                         </select>
-                        <input type="number" placeholder="Cantidad" min="1">
-                        <input type="submit" value="Agregar al carrito">
+                        <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+                        <input class="formulario__submit" type="submit" value="Agregar al carrito">
                     </form>
                 </div>
-
+            </div>
         </main>
 
         <footer class="footer">
