Plantilla finalizada, versión 1

--- a/producto.html
+++ b/producto.html
@@ -35,14 +35,15 @@
 
                     <form class="formulario">
                         <select class="formulario__campo">
-                            <option disabled selected>-- Seleccionar Talla --</option>
+                            <option disabled selected>-- Seleccionar Talla --
+                            </option>
                             <option>S</option>
                             <option>M</option>
                             <option>L</option>
                             <option>XL</option>
                         </select>
-                        <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
-                        <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                        <input class="formulario__campo" type="number" placeholder="Cantidad" min="1" required>
+                        <input class="formulario__submit" type="submit" value="Agregar al carrito" required>
                     </form>
                 </div>
             </div>
